@@ -1,7 +1,8 @@
-// $Id: CHANGELOG.txt,v 1.14.2.16.2.32 2009/03/18 16:47:30 morbus Exp $
+// $Id: CHANGELOG.txt,v 1.14.2.16.2.33 2009/05/08 17:13:16 morbus Exp $
 
 Bot 6.x-1.x, xxxx-xx-xx
 -----------------------
+  * Channels are now joined every 15 seconds instead of at initial connection.
   * Logging checks for channels are now case-insensitive (thanks mozillamonks).
   * #362661: Attempt to GHOST and IDENTIFY on nick clashes (thanks seutje).
   * #380330: Added perms for factoids, karma, and project (thanks lut4rp).
